<resources>
    <string name="app_name">ProyectoFP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="botonHome">🏠</string>
    <string name="botonEjercicios">💪</string>
    <string name="botonUser">👤</string>
    <string name="TorsoSup">Ejercicios de zona superior</string>
    <string name="TorsoInf">Ejercicios de zona inferior</string>
    <string name="cardio">Ejercicios de cardio</string>
    <string name="General">Ejercicios de cuerpo entero</string>
    <string name="curl_barraZ">Debes tomar la barra justo por las hendiduras internas con la palma de las manos mirando hacia arriba, los brazos deben encontrarse flexionados en un ángulo de 90 grados, debes mantener la espalda recta y las rodillas flexionadas.</string>
    <string name="Biceps">Explicación Biceps</string>
    <string name="Bicicleta">Explicación Bicicleta</string>
    <string name="Cardio_Bici">Ajusta la altura del sillín considerando que en el punto más bajo del pedal, la pierna debe estar recta con una ligera flexión de la rodilla. La espalda debe estar recta y el pecho hacia arriba.</string>
    <string name="textocurlconbarraz">Biceps (Curl con barra Z)</string>
    <string name="textoremoconbarra">Espalda (Remo con barra)</string>
    <string name="textopressbancaplano">Pecho (Press banca plano)</string>
    <string name="textopress">Hombros (Press)</string>
    <string name="textoaperturabancoplanoconmancuerda">Pecho (Aperturas banco plano con mancuerda)</string>
    <string name="textopulloverconmancuerna">Espalda (Pullover con mancuerna)</string>
    <string name="textotriceps">Triceps (Press francés mancuernas)</string>
    <string name="textopesomuertorodillasextendidas">Isquiosurales (Peso muerto rodillas extendidas)</string>
    <string name="textohipthrust">Gluteo (Hip thrust con barra apoyado en banca)</string>
    <string name="textoextensionrodilla">Cuadriceps (Extensión rodilla a una pierna con maquina)</string>
    <string name="textoextensionrodillasenprensa">Cuadriceps (Extensión rodillas en prensa)</string>
    <string name="textosentadillaenmultipower">Cuadriceps (Sentadilla en multipower)</string>
    <string name="textozancadahaciaatras">Glúteo (Zancada hacia atrás)</string>
    <string name="textoglobetaquat">Cuadriceps (Globet squat)</string>
    <string name="textogemeloaunapierna">Gemelo/sole (Gemelo a una pierna)</string>
    <string name="textodominadas">Espalda (Dominadas)</string>
    <string name="textopushups">Pecho (Eh - Push ups)</string>
    <string name="textopresshorizontalalternado">Pecho (Eh - Press horizontal alternado)</string>
    <string name="textoremoaunamano">Espalda (Remo a una mano)</string>
    <string name="Remoconbarra">Explicación Remo con barra</string>
    <string name="ExplicaciónRemoconbarra">El movimiento inicial parte de una postura en bipedestación, con las rodillas ligeramente flexionadas y los pies mirando un poco hacia afuera, la espalda recta, alineando hombros, lumbares y glúteos.La posición más anatómica y menos lesiva para realizar el remo con barra es con la espalda paralela al suelo, una separación estándar de las manos, será a la altura de los hombros con los brazos estirados al frente.</string>
    <string name="pesomuertorodillasextendidas">Explicación Peso muerto rodillas extendidas</string>
    <string name="Explicaiónpesomuertorodillasextendidas">Este ejercicio sirve para trabajar los femorales principalmente, si se realiza con las piernas extendidas. Consiste en colocarse de pie tomando la barra con las manos, luego se procede a descender el tronco manteniéndolo bien erguido, mientras la barra desciende pegada al cuerpo. Se debe llevar la cola hacia atrás y bajar lo más posible, manteniendo la postura. Las rodillas deben estar estiradas.</string>
    <string name="hiconbarraapoyadoenbanca">Explicación Hip thrust con barra apoyado en banca</string>
    <string name="explicacionhiconbarraapoyadoenbanca">Nos sentamos delante del banco apoyados en la esterilla y con las rodillas dobladas de tal manera que, al activarlas y levantar peso, nuestro cuerpo quede en un ángulo de 90 grados y los pies separados a la altura de nuestras caderas, comenzaremos apoyando nuestro peso con la parte de los hombros y las escápulas sobre el banco y elevando las piernas hasta que nuestro tronco quede arriba y recto.</string>
    <string name="extensionrodillaaunapierna">Explicación Extension rodilla a una pierna con maquina</string>
    <string name="explicaciónextensionrodillaaunapierna">Con el cuádriceps, extienda completamente la rodilla derecha mientras exhala. Mantenga 1 seg. Vuelva a la posición inicial con un movimiento suave, evitando que los pesos en movimiento toquen el resto de la placas. Repita el movimiento la cantidad especificada de repeticiones y luego repita con la otra pierna.</string>
    <string name="extensionrodillasenprensa">Explicación Extension rodillas en prensa</string>
    <string name="Explicaciónextensionrodillasenprensa">Debes sentarte y colocar las piernas en un angulo de 45º y levaantar la prensa, detente justo antes de extender por completo la rodilla cuando empujes la plataforma. Cuando regreses a la posición inicial</string>
    <string name="sentadillaenmultipower">Explicación Sentadilla en multipower</string>
    <string name="Explicaciónsentadillaenmultipower">Debes colocarte con las piernas separadas con las rodillas flexionadas en un angulo de 180º y levantar las pesas</string>
    <string name="zancadahaciaatras">Explicación Zancada hacia atrás</string>
    <string name="Explicaciónzancadahaciaatras">posiciónate con los pies juntos y las manos en la cintura. Da un paso hacia atrás con tu pie derecho y baja flexionando la rodilla hasta casi tocar suelo, de manera que tu pierna forme un ángulo de 90 grados.</string>
    <string name="globetsquat">Explicación Globet squat</string>
    <string name="Explicacionglobetsquat">Situate en posicion vertical, coge la kettlebell con las manos en forma de copa, Cuando tengas sujeto el peso, pégalo a tu pecho. Los brazos deben estar también pegados a tu torso, la espalda recta y el abdomen contraído, Es el momento de realizar la sentadilla. Para ello, inclina ligeramente la cadera hacia atrás, flexiona ligeramente las rodillas y mantén la pesa rusa todo el tiempo cerca de tu cuerpo.</string>
    <string name="gemeloaunpierna">Explicación Gemelo a un pierna</string>
    <string name="Explicaciongemeloaunpierna">colocarse en la maquina con las mancuernas, levantar una de las piernas y ponerse de puntillas con el otro pìe</string>
    <string name="pressbancaplano">Explicación Press banca plano</string>
    <string name="Explicacionpressbancaplano">Acuestate en un banco plano con los glúteos, caderas y hombros sobre el banco. Los pies deben apoyarse en suelo, separados un poco más allá del ancho de lo hombros. Con las manos debemos tomar la barra de manera que las palmas miren hacia adelante, es decir, en pronación, y separadas ligeramente más allá de la anchura de los hombros.</string>
    <string name="press">Explicación Press</string>
    <string name="Explicacionpress">Dejamos la barra a la altura de los hombros y desde ahí la elevamos por encima de la cabeza en un empuje vertical y volviendo a descenderla hasta la altura de los hombros de nuevo.</string>
    <string name="aperturabancoplano">Explicación Apertura banco plano con mancuerna</string>
    <string name="Explicacionaperturabancoplano">Tomamos las pesas o mancuernas, con los brazos casi totalmente extendidos y las articulaciones de los codos flexionados en un ángulo semejante a los 90 grados con el fin de protegerlos y llevando los brazos a una posición horizontal; posteriormente, vamos a llevar los brazos hacia arriba, al mismo tiempo que soltamos el aire.</string>
    <string name="pulloverconmancuerna">Explicación Pullover con mancuerna</string>
    <string name="Explicacionpulloverconmancuerna">Debemos colocarnos tumbados sobre un banco, con los pies apoyados sobre el suelo, y sujetando con ambas manos una mancuerna mientras conservamos los brazos extendidos verticalmente sobre el pecho, desde allí debemos inspirar y bajar la mancuerna por detrás de la cabeza mientras flexionamos ligeramente los codos para después volver lentamente a la posición inicial mientras exhalamos el aire.</string>
    <string name="pressfrances">Explicación Press frances mancuerna</string>
    <string name="Explicacionpressfrances">sin mover el hombro agarrar la mncuerda, mantén el brazo siempre perpendicular al suelo y realiza la ejecución únicamente con la flexión y extensión del antebrazo</string>
    <string name="dominadas">Explicación Dominadas</string>
    <string name="Explicaciondominadas">Debes agarrarte en la barra con los brazos extendidos agarrando con las manos bastante separadas y a la hora de hacer la dominada debes subir sin llegar a superar con las manos la altura de los hombros</string>
    <string name="ehpushups">Explicación Eh-push ups</string>
    <string name="Explicacionehpushups">Contrae tus abdominales y aprieta tu núcleo tirando de tu ombligo hacia tu columna, inhala mientras doblas lentamente los codos y te bajas al piso, hasta que tus codos formen un ángulo de 90 grados, exhala mientras contraes los músculos del pecho y empujas hacia arriba con las manos, volviendo a la posición inicial.</string>
    <string name="ehpresshorizontal">Explicación Eh-press horizontal alternado</string>
    <string name="Explicacionehpresshorizontal">Sentarse en un banco de 45º, vas a tomar las dos mancuernas y las colocarás en línea horizontal con tus hombros, Cuando des inicio con el levantamiento de las pesas, no te olvides de llevar a cabo una correcta respiración; hazlo a la vez que llevas las mancuernas hacia arriba, así como hacia adentro</string>
    <string name="remoaunamano">Explicación Remo a una mano</string>
    <string name="Sesion1cardio">Ejercicio cardiovascular</string>
    <string name="tiempo">Duracion del ejercicio: </string>
    <string name="TiempoCardio">30 minutos</string>
    <string name="Continuar">Continuar</string>
    <string name="Comohacer">¿Como se realiza el ejericio?</string>
    <string name="Repeticiones">Número de repeticiones</string>
    <string name="Series">Número de series</string>
    <string name="numero3">3</string>
    <string name="numeroRepeticionesHipthrust">10, 10, 10</string>
    <string name="Sesion4Sentadillaenmultipower">Sentadilla en multipower</string>
    <string name="Tiempo30Segundos">30 segundos</string>
    <string name="BotonIMC">Calcular</string>
    <string name="IMC">Indice de masa corporal</string>
    <string name="Altura">Introduce su altura: </string>
    <string name="Peso">Introduce su peso: </string>
    <string name="Centimetros">En centimetros </string>
    <string name="Gramos">En Kilogramos </string>
    <string name="Nada"></string>
    <string name="DescripcionBicicleta">Imagen de la bicicleta</string>
    <string name="bicicleta">Bicicleta</string>
    <string name="cinta">Cinta</string>
    <string name="eliptica">Eliptica</string>
    <string name="DescripcionCinta">Imagen de la cinta</string>
    <string name="DescripcionEliptica">Imagen de la eliptica</string>
    <string name="btn_Registrarse">Registrarse</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasena2">Contraseña de nuevo</string>
    <string name="DescripcionIMC">Imagen de IMC</string>
</resources>