<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".Ejercicios_Cardio">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:text="@string/bicicleta"
        android:textAlignment="center"
        android:textColor="#004D40"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/ImagenBicicleta"
        android:layout_width="305dp"
        android:layout_height="149dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/DescripcionCinta"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        app:srcCompat="@drawable/bicicleta" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:text="@string/cinta"
        android:textAlignment="center"
        android:textColor="#004D40"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <ImageButton
        android:id="@+id/ImagenCinta"
        android:layout_width="313dp"
        android:layout_height="160dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/DescripcionBicicleta"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481"
        app:srcCompat="@drawable/cinta" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:text="@string/eliptica"
        android:textAlignment="center"
        android:textColor="#004D40"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <ImageButton
        android:id="@+id/ImagenEliptica"
        android:layout_width="313dp"
        android:layout_height="160dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/DescripcionEliptica"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894"
        app:srcCompat="@drawable/eliptica" />


</androidx.constraintlayout.widget.ConstraintLayout>